# RAR3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mve.sh  run.sh
models/: cube_blender.ply  head_VenusMilo_HRBallPivoting.ply  head_VenusMilo_LRBallPivoting.off  head_VenusMilo_LRBallPivoting.ply  originalHead_VenusMilo.ply  prebundle.sfm  surface-L2-clean.off  surface-L2-clean.ply  surface-L2.ply
src/: Histogram.h  MeshAnalysis.cpp  MeshAnalysis.h  example_parcoursTriangles.cpp  example_triangle.cpp  exempleLecturePly.cpp  main.cpp
src/examples/: example_parcoursTriangles.cpp  example_parcoursTriangles.h  example_triangle.cpp  example_triangle.h  exempleLecturePly.cpp  exempleLecturePly.h
src/tinyply/: tinyply.h
